--- a/iMatMini/src/iMat/FXML/OrderHistoryItem.fxml
+++ b/iMatMini/src/iMat/FXML/OrderHistoryItem.fxml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root prefHeight="200.0" prefWidth="500.0" style="-fx-background-color: #ffffff;" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="500.0" prefHeight="200.0" prefWidth="500.0" style="-fx-background-color: #ffffff;" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Ordernummer:" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="237.0" layoutY="20.0" text="Datum:" AnchorPane.leftAnchor="240.0" AnchorPane.topAnchor="20.0">
+      <Label layoutX="20.0" layoutY="46.0" text="Datum:" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="46.0">
          <font>
             <Font name="Arial" size="14.0" />
          </font>
@@ -22,8 +23,17 @@
             <Font name="Arial" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="orderNummer" layoutX="137.0" layoutY="20.0" text="Label" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="20.0" />
-      <Label fx:id="orderDatum" layoutX="301.0" layoutY="20.0" text="Label" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="20.0" />
-      <FlowPane fx:id="orderVaror" layoutY="87.0" prefHeight="113.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="orderNumberLabel" layoutX="137.0" layoutY="20.0" text="Label" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="20.0" />
+      <Label fx:id="orderDateLabel" layoutX="130.0" layoutY="46.0" text="Label" AnchorPane.leftAnchor="130.0" AnchorPane.topAnchor="46.0" />
+      <FlowPane fx:id="orderedItemsFlowPane" layoutX="29.0" layoutY="87.0" prefHeight="113.0" prefWidth="218.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="253.0" />
+      <Label layoutX="370.0" layoutY="20.0" text="Kostnad:">
+         <font>
+            <Font name="Arial" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="orderCostLabel" layoutX="434.0" layoutY="20.0" text="Label" />
    </children>
+   <effect>
+      <DropShadow />
+   </effect>
 </fx:root>
